[REFACTOR] banyak